cabal-version: 3.0
name:          insight-collector
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.InsightCollection
    Domain.InsightCollection.Aggregate
    Domain.InsightCollection.InsightDispatch
    Domain.InsightCollection.ExternalSourcePort
    Domain.InsightCollection.DomainEvent
    Domain.InsightCollection.Error
    Domain.InsightCollection.ReasonCode
    Domain.InsightCollection.SourcePolicyComplianceService
    Domain.InsightCollection.EvidenceCompletenessPolicy
  build-depends:
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    ulid                 ^>=0.3.3

executable insight-collector
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    insight-collector,
    aeson                ^>=2.2,
    servant-server       ^>=0.20,
    warp                 ^>=3.4

test-suite insight-collector-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    insight-collector,
    hspec                ^>=2.11.16,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    ulid                 ^>=0.3.3
  other-modules:
    Domain.InsightCollection.AggregateSpec
    Domain.InsightCollection.InsightDispatchSpec
    Domain.InsightCollection.SourcePolicyComplianceServiceSpec
    Domain.InsightCollection.EvidenceCompletenessPolicySpec
    Domain.InsightCollection.ReasonCodeSpec
    Domain.InsightCollection.DomainEventSpec
