cabal-version: 3.0
name:          insight-collector
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.InsightCollection
    Domain.InsightCollection.Aggregate
    Domain.InsightCollection.InsightDispatch
    Domain.InsightCollection.ExternalSourcePort
    Domain.InsightCollection.DomainEvent
    Domain.InsightCollection.Error
    Domain.InsightCollection.ReasonCode
    Domain.InsightCollection.SourcePolicyComplianceService
    Domain.InsightCollection.EvidenceCompletenessPolicy
    UseCase.CollectInsights
    UseCase.RecordInsightAudit
    ACL.ExternalSource.X
    ACL.ExternalSource.YouTube
    ACL.ExternalSource.Paper
    ACL.ExternalSource.GitHub
    Infrastructure.Idempotency.InsightIdempotency
    Infrastructure.Publisher.PubSubInsightEventPublisher
    Infrastructure.Repository.FirestoreInsightCollectionRepository
    Infrastructure.Repository.FirestoreInsightRecordRepository
    Infrastructure.Repository.FirestoreSourcePolicyRepository
    Infrastructure.Wire.ReasonCodeWire
    Presentation.Api
    Presentation.AppM
    Presentation.PubSubHandler
  build-depends:
    aeson                ^>=2.2,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    http-types           ^>=0.12,
    katip                ^>=0.8,
    mtl                  ^>=2.3,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2

executable insight-collector
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    aeson                ^>=2.2,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    http-types           ^>=0.12,
    insight-collector,
    katip                ^>=0.8,
    mtl                  ^>=2.3,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2

test-suite insight-collector-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    aeson                ^>=2.2,
    base64               ^>=1.0,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    hspec                ^>=2.11.16,
    http-client          ^>=0.7,
    http-types           ^>=0.12,
    insight-collector,
    mtl                  ^>=2.3,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2
  other-modules:
    Domain.InsightCollection.AggregateSpec
    Domain.InsightCollection.InsightDispatchSpec
    Domain.InsightCollection.SourcePolicyComplianceServiceSpec
    Domain.InsightCollection.EvidenceCompletenessPolicySpec
    Domain.InsightCollection.ReasonCodeSpec
    Domain.InsightCollection.DomainEventSpec
    UseCase.CollectInsightsSpec
    ACL.ExternalSource.XSpec
    ACL.ExternalSource.YouTubeSpec
    ACL.ExternalSource.PaperSpec
    ACL.ExternalSource.GitHubSpec
    Infrastructure.Repository.FirestoreInsightRecordRepositorySpec
    Infrastructure.Publisher.PubSubInsightEventPublisherSpec
    Infrastructure.Idempotency.InsightIdempotencySpec
    Presentation.PubSubHandlerSpec
