cabal-version: 3.0
name:          portfolio-planner
version:       0.1.0.0
build-type:    Simple

executable portfolio-planner
  main-is:       Main.hs
  hs-source-dirs: src
  build-depends:
    base >=4.18 && <5,
    servant-server >=0.20 && <1,
    warp >=3.4 && <4,
    aeson >=2.2 && <3
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
