cabal-version: 3.0
name:          portfolio-planner
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.OrderProposal
    Domain.OrderProposal.Aggregate
    Domain.OrderProposal.ProposalDispatch
    Domain.OrderProposal.ValueObjects
    Domain.OrderProposal.DomainEvent
    Domain.OrderProposal.Error
    Domain.OrderProposal.ReasonCode
    Domain.OrderProposal.Ports
    Domain.OrderProposal.Factory.OrderProposalFactory
    Domain.OrderProposal.Factory.ProposalDispatchFactory
    Domain.OrderProposal.Specification.SignalIntegritySpecification
    Domain.OrderProposal.Specification.ComplianceReviewGateSpecification
    Domain.OrderProposal.Specification.ProposalBatchConsistencySpecification
    Domain.OrderProposal.Service.ProposalEligibilityPolicy
    Domain.OrderProposal.Service.OrderSizingPolicy
    Infrastructure.Publisher.PubSubPortfolioEventPublisher
    Infrastructure.Repository.FirestoreIdempotencyRepository
    Infrastructure.Repository.FirestoreOrderProposalRepository
    Infrastructure.Repository.FirestoreProposalDispatchRepository
    Infrastructure.Wire.ReasonCodeWire
    UseCase.PortfolioPlanningService
    UseCase.ProposalAuditWriter
  build-depends:
    aeson          >=2.2 && <3,
    gogol-firestore ^>=1.0.0,
    shared,
    text    ^>=2.1.4,
    time    ^>=1.14,
    transformers   ^>=0.6.1.2,
    ulid    ^>=0.3.3,
    unordered-containers ^>=0.2.21

executable portfolio-planner
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    portfolio-planner,
    shared,
    aeson          >=2.2 && <3,
    servant-server >=0.20 && <1,
    text           ^>=2.1.4,
    time           ^>=1.14,
    ulid           ^>=0.3.3,
    warp           >=3.4 && <4

test-suite portfolio-planner-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    portfolio-planner,
    aeson          >=2.2 && <3,
    containers ^>=0.7,
    gogol-firestore ^>=1.0.0,
    hspec      ^>=2.11.16,
    mtl        ^>=2.3,
    shared,
    text       ^>=2.1.4,
    time       ^>=1.14,
    ulid       ^>=0.3.3,
    unordered-containers ^>=0.2.21
  other-modules:
    Domain.OrderProposal.AggregateSpec
    Domain.OrderProposal.ProposalDispatchSpec
    Domain.OrderProposal.Factory.OrderProposalFactorySpec
    Domain.OrderProposal.Factory.ProposalDispatchFactorySpec
    Domain.OrderProposal.Specification.SignalIntegritySpecificationSpec
    Domain.OrderProposal.Specification.ComplianceReviewGateSpecificationSpec
    Domain.OrderProposal.Specification.ProposalBatchConsistencySpecificationSpec
    Domain.OrderProposal.Service.ProposalEligibilityPolicySpec
    Domain.OrderProposal.Service.OrderSizingPolicySpec
    Infrastructure.Publisher.PubSubPortfolioEventPublisherSpec
    Infrastructure.Repository.FirestoreIdempotencyRepositorySpec
    Infrastructure.Repository.FirestoreOrderProposalRepositorySpec
    Infrastructure.Repository.FirestoreProposalDispatchRepositorySpec
    UseCase.PortfolioPlanningServiceSpec
    UseCase.ProposalAuditWriterSpec
