cabal-version: 3.0
name:          risk-guard
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.RiskAssessment
    Domain.RiskAssessment.Aggregate
    Domain.RiskAssessment.Error
    Domain.RiskAssessment.Factory
    Domain.RiskAssessment.Port.IdempotencyKeyRepository
    Domain.RiskAssessment.ReasonCode
    Domain.RiskAssessment.Service.KillSwitchPolicy
    Domain.RiskAssessment.Service.RiskScreeningPolicy
    Domain.RiskAssessment.ValueObjects
    UseCase.CheckOrderRisk
    UseCase.SyncKillSwitch
  build-depends:
    aeson          ^>=2.2,
    bytestring     ^>=0.12,
    containers     ^>=0.7,
    mtl            ^>=2.3.1,
    servant-server ^>=0.20,
    shared,
    text           ^>=2.1.4,
    time           ^>=1.14,
    transformers   ^>=0.6.1.2,
    ulid           ^>=0.3.3

executable risk-guard
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    risk-guard,
    aeson          ^>=2.2,
    servant-server ^>=0.20,
    warp           ^>=3.4

test-suite risk-guard-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    risk-guard,
    hspec          ^>=2.11.16,
    mtl            ^>=2.3.1,
    text           ^>=2.1.4,
    time           ^>=1.14,
    ulid           ^>=0.3.3
  other-modules:
    Domain.RiskAssessment.AggregateSpec
    Domain.RiskAssessment.ReasonCodeSpec
    Domain.RiskAssessment.Service.RiskScreeningPolicySpec
    UseCase.CheckOrderRiskSpec
    UseCase.SyncKillSwitchSpec
