cabal-version: 3.0
name:          risk-guard
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.RiskAssessment
    Domain.RiskAssessment.Aggregate
    Domain.RiskAssessment.Error
    Domain.RiskAssessment.Factory
    Domain.RiskAssessment.Port.IdempotencyKeyRepository
    Domain.RiskAssessment.ReasonCode
    Domain.RiskAssessment.Service.KillSwitchPolicy
    Domain.RiskAssessment.Service.RiskScreeningPolicy
    Domain.RiskAssessment.ValueObjects
    Infrastructure.Publisher.PubSubRiskEventPublisher
    Infrastructure.Repository.FirestoreIdempotencyKeyRepository
    Infrastructure.Repository.FirestoreKillSwitchStateRepository
    Infrastructure.Repository.FirestoreRiskAssessmentRepository
    Infrastructure.Repository.FirestoreRiskSettingsRepository
    Infrastructure.Wire.ReasonCodeWire
    Presentation.Api
    Presentation.AppM
    Presentation.Subscriber.PubSubKillSwitchSubscriber
    Presentation.Subscriber.PubSubOrderRiskSubscriber
    UseCase.CheckOrderRisk
    UseCase.SyncKillSwitch
  build-depends:
    aeson                ^>=2.2,
    async                ^>=2.2,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    gogol-pubsub         ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21

executable risk-guard
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    risk-guard,
    aeson                ^>=2.2,
    async                ^>=2.2,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    gogol-pubsub         ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21,
    warp                 ^>=3.4

test-suite risk-guard-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    risk-guard,
    aeson                ^>=2.2,
    base64               ^>=1.0,
    bytestring           ^>=0.12,
    case-insensitive     ^>=1.2.1,
    gogol-firestore      ^>=1.0.0,
    hspec                ^>=2.11.16,
    hspec-wai            ^>=0.11.1,
    http-client          ^>=0.7,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21,
    wai                  ^>=3.2,
    wai-extra            ^>=3.1
  other-modules:
    Domain.RiskAssessment.AggregateSpec
    Domain.RiskAssessment.ReasonCodeSpec
    Domain.RiskAssessment.Service.RiskScreeningPolicySpec
    Infrastructure.Publisher.PubSubRiskEventPublisherSpec
    Infrastructure.Repository.FirestoreIdempotencyKeyRepositorySpec
    Infrastructure.Repository.FirestoreRiskAssessmentRepositorySpec
    Presentation.Server.RiskGuardServerSpec
    Presentation.Subscriber.PubSubOrderRiskSubscriberSpec
    UseCase.CheckOrderRiskSpec
    UseCase.SyncKillSwitchSpec
