[project]
name = "signal-generator"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1,<4",
    "numpy>=2.4,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.8,<2",
    "lightgbm>=4.6,<5",
    "google-cloud-firestore>=2.23,<3",
    "google-cloud-storage>=3.9,<4",
    "google-cloud-pubsub>=2.35,<3",
    "mlflow>=3.10,<4",
    "pyarrow>=23.0,<24",
    "python-ulid>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=6.0,<7",
    "mypy>=1.19,<2",
    "ruff>=0.15,<1",
    "pandas-stubs>=2.2,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: 統合テスト (エミュレーター起動が必要)",
]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "sklearn.*",
    "ulid.*",
    "mlflow.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.cloud.storage.*",
    "google.cloud.pubsub_v1.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
