[project]
name = "signal-generator"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
runtime = [
    "fastparquet>=2024.11.0,<2026",
    "flask>=3.0,<4",
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "scikit-learn>=1.5,<2",
    "lightgbm>=4.5,<5",
    "google-cloud-firestore>=2.0,<3",
    "google-cloud-storage>=2.0,<4",
    "google-cloud-pubsub>=2.0,<3",
    "mlflow-skinny>=2.0,<3",
    "python-ulid>=3.0,<4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff",
    "flask>=3.0,<4",
    "google-cloud-firestore>=2.0,<3",
    "google-cloud-storage>=2.0,<4",
    "google-cloud-pubsub>=2.0,<3",
    "pandas>=2.2,<4",
    "numpy>=2.0,<3",
]
integration = [
    "fastparquet>=2024.11.0,<2026",
    "lightgbm>=4.5,<5",
    "mlflow-skinny>=2.0,<3",
    "scikit-learn>=1.5,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../common/python/src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require emulators or external infrastructure",
]

[tool.mypy]
python_version = "3.14"
mypy_path = "src:../common/python/src"
explicit_package_bases = true
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "sklearn.*",
    "ulid.*",
    "mlflow.*",
    "google.cloud.storage.*",
    "google.cloud.pubsub_v1.*",
    "pandas.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
